--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         table {
             align-content: center;
             border: solid;
-            border-color: grey;
+            border-color: blue;
             max-width: 600px;
         }
 
